# bbstrassenfest

./: .gitignore  README  README.md  configure.ac  strassenfeste.ecpp
src/: Makefile.am  bbstrassenfest.conf  configuration.cpp  configuration.h  index.ecpp  main.cpp  webmain.cpp  webmain.ecpp
src/controller/: strassenfeste.cpp  suche.cpp
src/manager/: strassenfestmanager.cpp  strassenfestmanager.h
src/model/: strassenfest.cpp  strassenfest.h  strassenfestresult.cpp  strassenfestresult.h  suchesession.h
src/resources/: bbstrassenfest.css
src/view/: strassenfeste.ecpp  suche.ecpp
